--- a/web/templates/client_file.html
+++ b/web/templates/client_file.html
@@ -282,7 +282,7 @@
             </div>
             
             <!-- Export Button (placeholder for future) -->
-            <button class="btn" style="background: #718096; opacity: 0.6; cursor: not-allowed;" disabled>
+            <button class="btn" disabled>
                 Export
             </button>
         </div>
