--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}EdgeCase Equalizer{% endblock %}</title>
+    
+    <!-- Shared styles -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/shared.css') }}">
 
     <!-- Favicons-->
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicons/favicon.ico') }}">
